--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     "lucide-react": "^0.562.0",
     "next": "16.1.1",
     "pg": "^8.16.3",
-    "react": "19.2.3",
-    "react-dom": "19.2.3",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-hook-form": "^7.71.0",
     "recharts": "^3.6.0",
     "tailwind-merge": "^3.4.0",
@@ -36,8 +36,8 @@
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/pg": "^8.16.0",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
     "eslint": "^9",
     "eslint-config-next": "16.1.1",
     "prisma": "^7.2.0",
